About me update

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
     <h3>Hobbies and interests:</h3>
     <ul>
-      <li>??????</li>
-      <li>??????</li>
-      <li>??????</li>
+      <li>Coding</li>
+      <li>Sports</li>
+      <li>Github</li>
     </ul>
 
     <h3>Places I've visited:</h3>
     <ul>
-      <li>??????</li>
-      <li>??????</li>
-      <li>??????</li>
+      <li>Italy</li>
+      <li>France</li>
+      <li>USA</li>
     </ul>
   </body>
 </html>
