--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>Welcome to Mohammad Soleja!*Emoji*</h1>
+    <h1>Welcome to Mohammad Soleja! 😊</h1>
     <p>On this page, you'll find all sorts of interesting facts about me.</p>
 
     <h2>About me</h2>
